<?xml version="1.0"?>
<package>
  <name>scl_filters</name>
  <version>0.0.0</version>
  <description>The scl_filters package</description>
  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
